@@ -1,0 +1,7 @@
+{
+  "parent": "item/generated",
+  "textures": {
+    "layer0": "ScalingHealth:items/CrystalShard"
+  }
+}
+
